force-app/main/default/objects/ResidentialLoanApplication/fields/Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Type__c</fullName>
    <label>Loan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Building Loan</fullName>
            </value>
            <value>
                <fullName>Vacant Land</fullName>
            </value>
            <value>
                <fullName>Building Loan and Vacant Land</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
            </value>
            <value>
                <fullName>Further Advance</fullName>
            </value>
            <value>
                <fullName>Further Advance - Building Loan</fullName>
            </value>
            <value>
                <fullName>Bond an Unbonded Property (Have a Title Deed)</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
                <isActive>false</isActive>
                <label>Other</label>
            </value>
            <value>
                <fullName>Self-employed</fullName>
                <isActive>false</isActive>
                <label>Self-employed</label>
            </value>
            <value>
                <fullName>Unbonded Property</fullName>
                <isActive>false</isActive>
                <label>Unbonded Property</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>