force-app/main/default/objects/ResidentialLoanApplication/fields/Are_any_of_the_applicants_Self_Employed__c.field-meta.xml
<CustomField>
    <fullName>Are_any_of_the_applicants_Self_Employed__c</fullName>
    <description>Are any of the applicants Self Employed or are the applicants buying in a Trust or business name?</description>
    <label>Are any of the applicants Self Employed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>