force-app/main/default/objects/ResidentialLoanApplication/fields/DomainId__c.field-meta.xml
<CustomField>
    <fullName>DomainId__c</fullName>
    <externalId>true</externalId>
    <label>DomainId</label>
    <length>28</length>
    <type>Text</type>
</CustomField>