force-app/main/default/objects/ResidentialLoanApplication/fields/OTP_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>OTP_Signed_Date__c</fullName>
    <label>OTP Signed Date</label>
    <type>DateTime</type>
</CustomField>