force-app/main/default/objects/ResidentialLoanApplication/fields/Test_Disposable_income__c.field-meta.xml
<CustomField>
    <fullName>Test_Disposable_income__c</fullName>
    <formula>Total_Nett_Income__c - Total_Liability_Amount__c - Total_Contractual_Expenses_Amount__c + Existing_Bond_Repayments_to_be_Settled__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Monthly Disposable income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>