force-app/main/default/objects/ResidentialLoanApplication/fields/Total_Disposable_Income__c.field-meta.xml
<CustomField>
    <fullName>Total_Disposable_Income__c</fullName>
    <formula>/*Disposable income */
	/*(Total_Nett_Income__c -  Total_Liability_Amount__c -  Total_Contractual_Expenses_Amount__c )*/



/* Get lowest value betweenTotal income RTI, and Total Nett Income*/
 /*MIN(Total_Income_RTI_Amount__c,  (Total_Nett_Income__c -  Total_Liability_Amount__c -  Total_Contractual_Expenses_Amount__c ) ) -*/
/*Deduct additional expenses (Contractual, Living expenses, and total existing Bond Repayments)*/

/* Total_Contractual_Expenses_Amount__c   -
		Total_Liability_Amount__c  - */
		MIN(
		Total_Income_RTI_Amount__c -
		Total_Existing_Bond_Repayments__c +
		Existing_Bond_Repayments_to_be_Settled__c
		
		,
		
		(Total_Nett_Income__c -  Total_Liability_Amount__c -  Total_Contractual_Expenses_Amount__c + Existing_Bond_Repayments_to_be_Settled__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Installment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>