force-app/main/default/objects/ResidentialLoanApplication/recordTypes/Bond_Application.recordType-meta.xml
<RecordType>
    <fullName>Bond_Application</fullName>
    <active>true</active>
    <label>Bond Application</label>
</RecordType>