force-app/main/default/objects/ResidentialLoanApplication/recordTypes/Pre_Approval_Application.recordType-meta.xml
<RecordType>
    <fullName>Pre_Approval_Application</fullName>
    <active>true</active>
    <label>Pre-Approval Application</label>
</RecordType>